# nih_plug_iced

./: Cargo.toml  README.md
src/: assets.rs  editor.rs  lib.rs  widgets.rs  wrapper.rs
src/iced_baseview/: application.rs  conversion.rs  window.rs
src/widgets/: generic_ui.rs  param_slider.rs  peak_meter.rs  resize_handle.rs
