[package]
name = "nih_plug_iced"
version = "0.0.0"
edition = "2021"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
license = "ISC"

description = "An adapter to use iced GUIs with NIH-plug"

[features]
# Default to wgpu rendering (iced 0.14 from master)
default = ["wgpu"]

# Use wgpu rendering - now supported in iced 0.14 
wgpu = ["iced_baseview/wgpu"]

# Enables a debug view in native platforms (press F12)
debug = ["iced_baseview/toggle_debug"]

# Enables the `Image` widget
image = ["iced_baseview/image"]

# Enables the `Svg` widget  
svg = ["iced_baseview/svg"]

# Enables the `Canvas` widget - main goal of this modernization!
canvas = ["iced_baseview/canvas"]

# Enables geometry rendering
geometry = ["iced_baseview/geometry"]

# Enables web-colors support
web-colors = ["iced_baseview/web-colors"]

# NOTE: The following features from old version are no longer available:
# - palette, tokio, async-std, smol (not in BillyDM's iced_baseview)
# - glow/opengl features (BillyDM's version is wgpu-only)

[dependencies]
nih_plug = { git = "https://github.com/Cmdv/nih-plug.git", branch = "expose-process-stopped", default-features = false }
nih_plug_assets = { git = "https://github.com/robbert-vdh/nih_plug_assets.git" }

# The currently targeted version of baseview uses a different version of
# `raw_window_handle` than NIH-plug, so we need to manually convert between them
raw-window-handle = "0.4"

atomic_refcell = "0.1"
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "579130ecb4f9f315ae52190af42f0ea46aeaa4a2" }
crossbeam = "0.8"
# This targets iced 0.14
iced_baseview = { git = "https://github.com/Cmdv/iced_baseview", branch = "iced-14", default-features = false }

futures-util = "0.3"
# To make the state persistable
serde = { version = "1.0", features = ["derive"] }
